# prism-app

./: .dockerignore  .eslintrc  .firebaserc  .git-blame-ignore-revs  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  action.yml  config-overrides.js  firebase.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.circleci/: config.yml
api/: .dockerignore  .env.example  .gitignore  AUTH.md  Dockerfile  Dockerfile.export-map-worker  Makefile  README.md  alembic.ini  audit-ignores.toml  docker-compose.deploy.yml  docker-compose.develop.yml  docker-compose.map-export-e2e.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  install.txt  pip-audit.toml  pyproject.toml  requirements-export-map-worker.txt  requirements.txt  server_setup.sh  set_envs.sh  trivy-ci.yaml
api/alembic/: env.py
api/alembic/versions/: aa_alerts_metadata_001.py  aa_drought_unique_country_status.py  add_aa_drought_dataset_table.py  add_dashboard_table.py  add_staging_status.py  add_users_auth_provider.py  anticipatory_action_alerts_metadata_001.py  map_export_job_priority_001.py  map_export_jobs_001.py  map_export_jobs_002_origin_url.py  map_export_schedules_001.py  prism_alerts_baseline.py  prism_users_permissions.py
api/app/: auth.py  caching.py  duckdb.py  duckdb_utils.py  fetch_stac.py  geotiff_from_stac_api.py  googleflood.py  hdc.py  kobo.py  main.py  models.py  playwright_renderer.py  raster_utils.py  report.py  sample_requests.py  timer.py  utils.py  validation.py  zonal_stats.py
api/app/database/: alert_model.py  database.py  user_info_model.py
api/app/playwrigh-renderer-poc/: main.py
api/app/scripts/: add_users.py
api/app/tests/: conftest.py-template  small_admin_boundaries.json  test_alerting.py  test_api.py  test_calculate.py  test_google_floods_api.py  test_playwright_renderer.py  test_raster_utils.py
api/crons/: _compose_run.sh  cron_aa_flood_alert_run.sh  cron_aa_storm_alert_run.sh  cron_alert_run.sh  cron_api_auto_deploy.sh  cron_scheduled_public_maps.sh  rollback_api_to_prev.sh
api/prism_app/: __init__.py  access_pages.py  admin.py  admin_bulk_actions.py  admin_map_export.py  admin_oidc_auth.py  admin_settings.py  auth.py  auth_legacy.py  caching.py  dashboard_admin.py  dashboard_config_validation.py  dashboard_slug.py  debug_export_screenshot.py  deps.py  duckdb_utils.py  e2e_export_maps.py  export_job_claim.py  export_job_fingerprint.py  export_jobs_db.py  export_jobs_routes.py  export_jobs_service.py  export_maps.py  export_s3.py  export_schedule_validation.py  geotiff_from_stac_api.py  googleflood.py  hdc.py  kobo.py  main.py  map_export_layer_catalog.py  models.py  oidc_support.py  permission_codes.py  presigned_cog_url.py  prism_auth_service.py  published_dashboards.py  pytest.ini  raster_utils.py  report.py  (+7 more)
api/prism_app/aa_drought/: __init__.py  aa_drought_admin.py  country_scope.py  csv_field.py  published_datasets.py  validate_csv.py  validation.py
api/prism_app/alert_workers/: __init__.py  aa_flood.py  aa_storm.py  bbox_utils.py  browser_shot.py  coastal_districts.py  db.py  layer_days.py  mail_render.py  settings.py  smtp_mailer.py  threshold_worker.py  wcs_url.py
api/prism_app/auth/: __init__.py  access_pages.py  admin_oidc_auth.py  admin_request.py  admin_settings.py  auth_oidc.py  deps.py  oidc_id_token_profile.py  oidc_support.py  permission_codes.py  prism_auth_service.py
api/prism_app/ci/: __init__.py  alert_db_contract.py  alert_db_smoke.py  worker_import_smoke.py
api/prism_app/dashboard/: __init__.py  dashboard_admin.py  dashboard_config_field.py  dashboard_config_validation.py  published_dashboards.py  util.py
api/prism_app/data/: schedule_layer_manifest.json
api/prism_app/database/: __init__.py  aa_drought_model.py  alert_model.py  anticipatory_action_alerts_model.py  dashboard_model.py  database.py  kobo_user_model.py  map_export_job_model.py  map_export_schedule_model.py  permission_model.py  prism_user_model.py  user_info_model.py  user_model.py
api/prism_app/export_jobs/: __init__.py  claim.py  db.py  download_filename.py  fingerprint.py  priority.py  routes.py  schedule_admin_form.py  schedule_cron.py  schedule_download.py  schedule_export_email.py  schedule_request.py  schedule_service.py  scheduler.py  service.py
api/prism_app/export_schedules/: __init__.py  routes.py
api/prism_app/routers/: __init__.py  auth_oidc.py
api/prism_app/scheduled_public_maps/: __init__.py
api/prism_app/scripts/: add_users.py  export_maps_perf_results.json  scheduled_public_maps_cron.py
api/prism_app/templates/: actions.html  create_no_add_another.html  detail_dashboard.html  edit_no_add_another.html  (+5 more)
api/scripts/: alert_email_ethereal_e2e_docker.sh  debug_export_screenshot.sh  e2e_export_map_pdf.py  grant_admin_permission.py  health_check.sh  map_export_job_docker_e2e.sh  seed_alerts_db.py  seed_local_alerts_dev.sql  seed_map_export_e2e_auth.sql
api/utils/: wait-for-it.sh
(+3606 files in other folders)
