[tool.poetry]
name = "prism-app"
version = "1.1.1"
description = "API Interface for WFP PRISM"
authors = ["Ovio"]
license = "Apache 2.0"

[tool.poetry.dependencies]
PyJWT = "2.4.0"
python = ">=3.10,<3.11"
requests = "^2.32.0"
playwright = "1.38.0"
fastapi = "^0.109.1"
schemathesis = "^3.19.7"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
sqlalchemy = "^1.4.40"
pydantic = { version = "1.10.13", extras = ["email"] }
python-dateutil = "2.8.2"
types-python-dateutil = "2.8.19"
psycopg2 = "^2.9.9"
rasterstats = "0.20.0"
boto3 = "^1.28.61"
cachetools = "^5.3.1"
odc-geo = "^0.4.1"
odc-stac = "^0.3.8"
pystac-client = "^0.7.5"
pystac = "^1.8.4"
pytest-asyncio = "^0.21.1"
pytest-playwright = "^0.4.3"
rasterio = "^1.3.9"
rioxarray = "^0.17.0"
pytest-recording = "^0.13.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[[tool.mypy.overrides]]
module = ["backoff"]
ignore_missing_imports = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3       # Vertical Hanging Indent
src_paths = "prism-app/api"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
